feat: [stable] [done] [tested] Release candidate for codexstester simple - release 1.0.9 - java8 - spring boot 2.6.4